test/testdata/nil/invalid_unary_op_error.lox
-nil; // error: - operator cannot be used with type nil
